--- a/zadatak 2.html
+++ b/zadatak 2.html
@@ -19,7 +19,7 @@
 			<img src="https://img.24sata.hr/FCtldnpiKVuk0vfSaPK9d8yEnig=/622x350/smart/media/images/2024-44/2024-11-02t164059z-1694281148-up1ekb21ac97u-rtrmadp-3-soccer-england-bou-mci-report.jpg" height="200" alt="Gvardiol" title="Gvardiol">
 		</figure>
 		<figure>
-			<img src="img/Slika s utakmice.jpg" height="200" alt="Slika s utakmice" title="Slika s utakmice">
+			<img alt="Slika s utakmice" src="Slika s utakmice.jpg" height="200">
 		</figure>
 	</body>
 </html>
