--- a/zadatak 3.html
+++ b/zadatak 3.html
@@ -22,7 +22,7 @@
 	</figure>
 	
 	<figure id="figure_2">
-		<a href="Slika s utakmice.jpg" target="_blank"><img src="Slika s utakmice.jpg" height="200" alt="Slika s utakmice" title="Slika s utakmice">
+		<a href="Slika s utakmice.jpg" target="_blank"><img src="Slika s utakmice.jpg" height="200" alt="Slika s utakmice">
 	</figure>
 	
 	
